Really fixed constrain issues this time

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -36,10 +36,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="This is the body text" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVa-sB-NpH">
-                                                    <rect key="frame" x="20" y="74.5" width="381" height="75"/>
+                                                    <rect key="frame" x="20" y="74.5" width="374" height="75"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="DTA-ks-PbV"/>
-                                                        <constraint firstAttribute="width" constant="381" id="jA5-wr-Zds"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -61,6 +60,8 @@
                                             <constraints>
                                                 <constraint firstItem="AV9-wt-Fqs" firstAttribute="leading" secondItem="Nvs-km-JSJ" secondAttribute="leading" constant="10" id="1cQ-Mv-aKf"/>
                                                 <constraint firstItem="oB9-q9-73k" firstAttribute="trailing" secondItem="Nvs-km-JSJ" secondAttribute="trailingMargin" id="23p-DC-2EW"/>
+                                                <constraint firstItem="oB9-q9-73k" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="zOd-yH-wK0" secondAttribute="trailing" constant="8" id="63L-yv-VB9"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="AV9-wt-Fqs" secondAttribute="trailing" constant="8" id="8Jr-wz-vOd"/>
                                                 <constraint firstAttribute="trailing" secondItem="eVa-sB-NpH" secondAttribute="trailing" constant="20" id="L8W-Ac-2gQ"/>
                                                 <constraint firstAttribute="bottom" secondItem="eVa-sB-NpH" secondAttribute="bottom" id="PfN-dO-T05"/>
                                                 <constraint firstItem="eVa-sB-NpH" firstAttribute="top" secondItem="oB9-q9-73k" secondAttribute="bottom" constant="41" id="QJ1-n2-qxK"/>
